[package]
name = "isis-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-derive = "0.10.1"
rusticata-macros = "4.1.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
